--- a/home/retrain/test.ipynb
+++ b/home/retrain/test.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import absolute_import\n",
@@ -22,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "t=tqdm(pd.read_csv('test.csv').values)\n",
@@ -38,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test"
@@ -49,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_image(filename):\n",
@@ -73,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def run_graph(src, dest, labels, input_layer_name, output_layer_name, num_top_predictions):\n",
@@ -85,7 +75,7 @@
     "        # dimension represents the input image count, and the other has\n",
     "        # predictions per class\n",
     "        i=0\n",
-    "        #with open('submit.csv','w') as outfile:\n",
+    "        with open('test_results.csv','w') as outfile:\n",
     "        for f in os.listdir(src):\n",
     "            im=Image.open(os.path.join(src,f))\n",
     "            img=im.convert('RGB')\n",
@@ -99,8 +89,9 @@
     "            for node_id in top_k:\n",
     "                predicted_label = labels[node_id]\n",
     "                score = predictions[node_id]\n",
+    "                ##print('%s (score = %.5f) %s , %s' % (test[i], predicted_label))\n",
     "                print(test[i]+',',predicted_label)\n",
-    "                #outfile.write(test[i]+','+human_string+'\\n')\n",
+    "                outfile.write(test[i]+','+predicted_label+'\\n')\n",
     "            i+=1"
    ]
   },
@@ -108,15 +99,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "src=os.path.join('.','test_img')\n",
     "dest=os.path.join('.','test_img2')\n",
-    "labels='C:/tmp/output_labels.txt'\n",
-    "graph='C:/tmp/output_graph.pb'\n",
+    "labels='/tmp/output_labels.txt'\n",
+    "graph='/tmp/output_graph.pb'\n",
     "input_layer='DecodeJpeg/contents:0'\n",
     "output_layer='final_result:0'\n",
     "num_top_predictions=1\n",
@@ -124,6 +114,13 @@
     "load_graph(graph)\n",
     "run_graph(src,dest,labels,input_layer,output_layer,num_top_predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -142,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
